# pymidi2

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: python.json
.github/workflows/: ci.yaml
netmidi2/: client.py  core.py  host.py  ump.py
pymidi2/: __main__.py  client.py  core.py  endpoint.py  host.py  smf.py  transport.py  udp.py  ump.py
tests/: test_midiudp.py  test_netmidi.py  test_ump.py
