[project]
name = "pymidi2"
description = "A pure Python implementation of MIDI 2.0 (UMP)"
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "typing-extensions"
]
authors = [
    {name = "Titouan Christophe", email = "moiandme@gmail.com"}
]
license = "MIT"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.mypy]
python_version = "3.10"
exclude = ["venv"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
